Adding nancy forms authentication

--- a/Sriracha.Web/views/home/index.cshtml
+++ b/Sriracha.Web/views/home/index.cshtml
@@ -4,6 +4,6 @@
     <title></title>
 </head>
 <body>
-    hello there... @DateTime.Now
+    hello there @this.Context.CurrentUser.UserName ... @DateTime.Now
 </body>
 </html>
