--- a/Sriracha.Web/views/home/index.cshtml
+++ b/Sriracha.Web/views/home/index.cshtml
@@ -1,9 +1,5 @@
-﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title></title>
-</head>
-<body>
-    hello there @this.Context.CurrentUser.UserName ... @DateTime.Now
-</body>
-</html>
+﻿@{
+    Layout = "views/shared/_layout.cshtml";
+}
+
+<h3>hello there @this.Context.CurrentUser.UserName ... @DateTime.Now</h3>
