--- a/Sriracha.Web/views/shared/_layout.cshtml
+++ b/Sriracha.Web/views/shared/_layout.cshtml
@@ -61,5 +61,10 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="~/content/scripts/vendor/jquery/jquery-2.1.1.js"></script>
     <script src="~/content/scripts/vendor/bootstrap/bootstrap.min.js"></script>
+    <script src="~/content/scripts/vendor/ember/handlebars.js"></script>
+    <script src="~/content/scripts/vendor/ember/ember.debug.js"></script>
+    <script src="~/content/scripts/vendor/ember/ember-template-compiler.js"></script>
+
+    @RenderSection("Scripts", false)
 </body>
 </html>
