--- a/Sriracha.Web/views/home/index.cshtml
+++ b/Sriracha.Web/views/home/index.cshtml
@@ -28,6 +28,17 @@
 
 <script type="text/x-handlebars" data-template-name="project/create">
     <h3>Create Project</h3>
+    <form class="form-horizontal" {{action "saveProject" on="submit"}}>
+        <div class="form-group">
+            <label class="col-md-2 control-label" for="UserName">Project Name</label>
+            <div class="col-md-10">
+                {{input value=projectName class="form-control" required="required"}}
+            </div>
+        </div>
+        <div class="form-group">
+            <input type="submit" value="save" class="btn btn-success" />
+        </div>
+    </form>
 </script>
 
 
@@ -49,6 +60,14 @@
             //    this.route("changeroles", { path: "edit-roles" });
             //    this.route("addnote", { path: "add-note" });
             //});
+        });
+
+        SrirachaApp.ProjectCreateController = Ember.Controller.extend({
+            actions: {
+                "saveProject": function (data) {
+                    Ember.$.post("/api/project", { projectName: this.get("projectName")} )
+                }
+            }
         });
     </script>
 }
