saving data view embermodel, displaying errors

--- a/Sriracha.Web/views/shared/_layout.cshtml
+++ b/Sriracha.Web/views/shared/_layout.cshtml
@@ -23,7 +23,7 @@
 
         .body-content {
             padding: 40px 15px;
-            text-align: center;
+            /*text-align: center;*/
         }
     </style>
 </head>
@@ -64,6 +64,7 @@
     <script src="~/content/scripts/vendor/ember/handlebars.js"></script>
     <script src="~/content/scripts/vendor/ember/ember.debug.js"></script>
     <script src="~/content/scripts/vendor/ember/ember-template-compiler.js"></script>
+    <script src="~/content/scripts/vendor/ember/ember-model.js"></script>
 
     @RenderSection("Scripts", false)
 </body>
