--- a/Sriracha.Web/views/home/index.cshtml
+++ b/Sriracha.Web/views/home/index.cshtml
@@ -22,6 +22,18 @@
 
 <script type="text/x-handlebars" data-template-name="project/index">
     <h3>Project List</h3>
+    <table class="table table-striped">
+        <tbody>
+            <tr>
+                <th>Project Name</th>
+            </tr>
+            {{#each project in this}}
+            <tr>
+                <td>{{#link-to "project.view" project.id}}{{project.projectName}}{{/link-to}}</td>
+            </tr>
+            {{/each}}
+        </tbody>
+    </table>
     {{#link-to "project.create"}}Create Project{{/link-to}}
 </script>
 
@@ -30,6 +42,9 @@
     <h3>Create Project</h3>
     <form class="form-horizontal" {{action "saveProject" on="submit"}}>
         <div class="form-group">
+            {{#if errorMessage}}
+                <div class="alert alert-danger">{{errorMessage}}</div>
+            {{/if}}
             <label class="col-md-2 control-label" for="UserName">Project Name</label>
             <div class="col-md-10">
                 {{input value=projectName class="form-control" required="required"}}
@@ -41,33 +56,12 @@
     </form>
 </script>
 
+<script type="text/x-handlebars" data-template-name="project/view">
+    <h3>{{model.projectName}}</h3>
+</script>
+
 
 @section Scripts
 {
-    <script type="text/javascript">
-        window.SrirachaApp = Ember.Application.create({
-            rootElement: "#sriracha-app",
-            LOG_TRANSITIONS: true
-        });
-
-        window.SrirachaApp.Router.map(function () {
-            this.resource("project", function () {
-                this.route("create", { path: "create" });
-            });
-            //this.resource("user", { path: 'users/:user_id' }, function () {
-            //    this.route("editinfo", { path: "edit" });
-            //    this.route("changepassword", { path: "change-password" });
-            //    this.route("changeroles", { path: "edit-roles" });
-            //    this.route("addnote", { path: "add-note" });
-            //});
-        });
-
-        SrirachaApp.ProjectCreateController = Ember.Controller.extend({
-            actions: {
-                "saveProject": function (data) {
-                    Ember.$.post("/api/project", { projectName: this.get("projectName")} )
-                }
-            }
-        });
-    </script>
+    <script src="~/content/scripts/sriracha-app.js"></script>
 }
