Nancy + Ember + Owin + SquishIt finally works in a service!  yay!

--- a/Sriracha.Web/views/home/index.cshtml
+++ b/Sriracha.Web/views/home/index.cshtml
@@ -6,7 +6,8 @@
 
 @section Scripts
 {
-    @Html.Raw(Scripts.Render("~/sriracha-app/templates").ToHtmlString())
-    @Html.Raw(Scripts.Render("~/sriracha-app/scripts").ToHtmlString())
+    @Html.Raw(SquishIt.Framework.Bundle.JavaScript().RenderNamed("sriracha-app-templates"))
+    @Html.Raw(SquishIt.Framework.Bundle.JavaScript().RenderNamed("sriracha-app-scripts").ToString())
+
 }
 
